# LangFlowSaas

./: # COMMUNITY BUILDING PLAYBOOK FOR TEACH .md  # COMPETITIVE INTELLIGENCE APPENDIX.md  # FINANCIAL PLANNING — Teach Charlie AI .md  # GROWTH LOOPS & VIRAL MECHANICS — Teach.md  # METRICS & DECISION FRAMEWORK.md  # PRE-LAUNCH VALIDATION PLAYBOOK — Weeks.md  # RISK MITIGATION -- Teach Charlie AI.md  # TEACH CHARLIE AI — 90-DAY LAUNCH SPRIN.md  # TEACH CHARLIE AI — WORKSHOP STRATEGY P.md  # TEACH CHARLIE AI: POSITIONING & MESSAG.md  # TECHNICAL PRIORITIES FOR BUSINESS GROW.md  # Teach Charlie AI — Pricing & Monetizat.md  # Teach Charlie AI: Content & SEO Strate.md  .env.example  .env.production.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  .worktreeinclude  DEPLOYMENT.md  DEPLOYMENT_PROGRESS.md  HANDOFF_PROMPT.md  PRODUCTION_CHECKLIST.md  README.md  claude.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fix_old_workflows.py  langflow.Dockerfile  langflow_nan_fix.py  upstreams.lock.json
.claude/: settings.json  settings.local.json.example
.github/: BRANCH_PROTECTION.md
docs/: 00_PROJECT_SPEC.md  00_PROJECT_SPEC.template.md  01_ARCHITECTURE.md  01_ARCHITECTURE.template.md  02_CHANGELOG.md  02_CHANGELOG.template.md  03_STATUS.md  03_STATUS.template.md  04_DATABASE_ARCHITECTURE.md  04_DEPLOYMENT_CHECKLIST.md  (+55 more)
nginx/: nginx.conf  (+2 more)
tc-agent/src-tauri/: Cargo.toml  tauri.conf.json
tc-agent/src-tauri/capabilities/: default.json
tc-agent/src-tauri/icons/: icon.icns
tc-agent/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
(+577 files in other folders)
