[package]
name = "teach-charlie-desktop"
version = "0.1.0"
description = "Teach Charlie Desktop — connect your AI agent to OpenClaw"
authors = ["Teach Charlie AI"]
edition = "2021"

[lib]
name = "teach_charlie_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tokio = { version = "1", features = ["full"] }
log = "0.4"
